# realtime_correlative_scan_matching

./: README.md
Real-Time_Correlative_Scan_Matching/: CMakeLists.txt  README.md  package.xml
Real-Time_Correlative_Scan_Matching/config/: default.yaml
Real-Time_Correlative_Scan_Matching/include/: grid.cpp  grid.h  mapper.cpp  mapper.h  multi_resolution_map.cpp  multi_resolution_map.h  multi_solution_map.cpp  multi_solution_map.h  parameters.h  pose2d.cpp  pose2d.h  single_layer.cpp  single_layer.h
Real-Time_Correlative_Scan_Matching/launch/: mapping_node.launch
Real-Time_Correlative_Scan_Matching/rviz/: default.rviz
Real-Time_Correlative_Scan_Matching/src/: mapping_node.cpp
cmake/: FindGperftools.cmake
cslibs_math/: .gitlab-ci.yml  README.md
cslibs_math/cslibs_math/: CMakeLists.txt  package.xml
cslibs_math/cslibs_math/cmake/: cslibs_math_add_unit_test_gtest.cmake  cslibs_math_add_unit_test_ros.cmake
cslibs_math/cslibs_math/include/cslibs_math/color/: color.hpp
cslibs_math/cslibs_math/include/cslibs_math/common/: angle.hpp  array.hpp  div.hpp  equal.hpp  floor.hpp  index.hpp  log_odds.hpp  mod.hpp  sqrt.hpp
cslibs_math/cslibs_math/include/cslibs_math/linear/: eigen.hpp  hausdorff.hpp  matrix.hpp  pointcloud.hpp  vector.hpp
cslibs_math/cslibs_math/include/cslibs_math/random/: random.hpp
cslibs_math/cslibs_math/include/cslibs_math/sampling/: normal.hpp  traits.hpp  uniform.hpp
cslibs_math/cslibs_math/include/cslibs_math/serialization/: array.hpp  binary.hpp  distribution.hpp  matrix.hpp  stable_distribution.hpp  stable_weighted_distribution.hpp  vector.hpp  weighted_distribution.hpp
cslibs_math/cslibs_math/include/cslibs_math/statistics/: angular_mean.hpp  bhattacharyya.hpp  distribution.hpp  limit_eigen_values.hpp  mean.hpp  stable_distribution.hpp  stable_weighted_distribution.hpp  weighted_angular_mean.hpp  weighted_distribution.hpp  weighted_quaternion_mean.hpp
cslibs_math/cslibs_math/include/cslibs_math/utility/: stamped.hpp  tiny_time.hpp
cslibs_math/cslibs_math/test/: array.cpp  distribution_serialization.cpp  div.cpp  hausdorff.cpp  mod.cpp  random.cpp  sqrt.cpp  test_distribution.hpp  test_distribution.test  test_distribution_float.test  test_node_distribution.cpp  test_node_distribution_float.cpp
cslibs_math/cslibs_math/test/res/: test_distribution_200.yaml  test_distribution_500.yaml  test_distribution_5000.yaml
cslibs_math/cslibs_math_2d/: CMakeLists.txt  package.xml
cslibs_math/cslibs_math_2d/include/cslibs_math_2d/algorithms/: amanatides.hpp  bresenham.hpp  efla_iterator.hpp  icp.hpp  simple_iterator.hpp
cslibs_math/cslibs_math_2d/include/cslibs_math_2d/conversion/: boost.hpp
cslibs_math/cslibs_math_2d/include/cslibs_math_2d/linear/: box.hpp  covariance.hpp  ellipse.hpp  line.hpp  point.hpp  pointcloud.hpp  polar_point.hpp  polar_pointcloud.hpp  pose.hpp  transform.hpp  vector.hpp
cslibs_math/cslibs_math_2d/include/cslibs_math_2d/serialization/: transform.hpp
cslibs_math/cslibs_math_2d/test/: box.cpp  ellipse_test.cpp  ray_tracing.cpp  transform.cpp  vector.cpp
cslibs_math/cslibs_math_3d/: CMakeLists.txt  package.xml
cslibs_math/cslibs_math_3d/include/cslibs_math_3d/algorithms/: amanatides.hpp  bresenham.hpp  efla_iterator.hpp  icp.hpp  simple_iterator.hpp
cslibs_math/cslibs_math_3d/include/cslibs_math_3d/linear/: box.hpp  covariance.hpp  line.hpp  point.hpp  pointcloud.hpp  pose.hpp  quaternion.hpp  transform.hpp  vector.hpp
cslibs_math/cslibs_math_3d/include/cslibs_math_3d/serialization/: quaternion.hpp  transform.hpp
cslibs_math/cslibs_math_3d/test/: quaternion.cpp  ray_tracing.cpp  transform.cpp
cslibs_math/cslibs_math_ros/: CMakeLists.txt  package.xml
cslibs_math/cslibs_math_ros/include/cslibs_math_ros/geometry_msgs/: conversion_2d.hpp  conversion_3d.hpp
cslibs_math/cslibs_math_ros/include/cslibs_math_ros/sensor_msgs/: conversion_2d.hpp  conversion_3d.hpp
cslibs_math/cslibs_math_ros/include/cslibs_math_ros/tf/: conversion_2d.hpp  conversion_3d.hpp  tf_listener.hpp  tf_provider.hpp
cslibs_time/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
cslibs_time/include/cslibs_time/: duration.hpp  rate.hpp  stamped.hpp  time.hpp  time_frame.hpp
cslibs_time/include/cslibs_time/conversion/: ros.hpp
cslibs_time/include/cslibs_time/statistics/: duration_lowpass.hpp  duration_mean.hpp  duration_window.hpp
