<?xml version="1.0"?>
<package>
  <name>cslibs_math</name>
  <version>0.0.6</version>
  <description>
    The cslibs_math package provides different math utility classes for e.g. multidimensional
    statistics and linear algebra.
  </description>

  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
  </export>
</package>
